# observabilidade-teste

./: .env.example  docker-compose.main.yml  entrypoint.sh  pyproject.toml
migrations/versions/: ac083de04a21_add_acesso_permitido_to_usuario.py
src/controllers/: audio_controller.py  usuario_controller.py
src/models/: usuario_model.py
src/schemas/: auth_schema.py
src/services/: audio_service.py  auth_service.py  convite_service.py
