[tool.poetry]
name = "vocalizeai-api"
version = "0.1.0"
description = ""
authors = ["thiagojorgelins <thiago.jorge2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "*"
alembic = "*"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
python-dotenv = "^1.0.1"
pydub = "^0.25.1"
redis = "^5.2.1"
fastapi-mail = {extras = ["aioredis"], version = "^1.4.2"}
boto3 = "^1.36.9"
sib-api-v3-sdk = "^7.6.0"

opentelemetry-distro = "*"
opentelemetry-sdk = "*"
opentelemetry-exporter-otlp-proto-grpc = "*"
opentelemetry-instrumentation = "*"
opentelemetry-instrumentation-fastapi = "0.60b1"
opentelemetry-instrumentation-httpx = "0.60b1"
opentelemetry-instrumentation-sqlalchemy = "0.60b1"
opentelemetry-instrumentation-asyncpg = "0.60b1"
opentelemetry-instrumentation-redis = "0.60b1"
opentelemetry-instrumentation-botocore = "0.60b1"

opentelemetry-exporter-otlp = "^1.39.1"
opentelemetry-instrumentation-asyncio = "0.60b1"
opentelemetry-instrumentation-dbapi = "0.60b1"
opentelemetry-instrumentation-logging = "0.60b1"
opentelemetry-instrumentation-sqlite3 = "0.60b1"
opentelemetry-instrumentation-threading = "0.60b1"
opentelemetry-instrumentation-urllib = "0.60b1"
opentelemetry-instrumentation-wsgi = "0.60b1"
opentelemetry-instrumentation-asgi = "0.60b1"
opentelemetry-instrumentation-boto3sqs = "0.60b1"
opentelemetry-instrumentation-click = "0.60b1"
opentelemetry-instrumentation-grpc = "0.60b1"
opentelemetry-instrumentation-jinja2 = "0.60b1"
opentelemetry-instrumentation-requests = "0.60b1"
opentelemetry-instrumentation-starlette = "0.60b1"
opentelemetry-instrumentation-tortoiseorm = "0.60b1"
opentelemetry-instrumentation-urllib3 = "0.60b1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
